Modal z-index quick fix.

--- a/assets/css/project.css
+++ b/assets/css/project.css
@@ -920,3 +920,6 @@ td .editable-controls>input[type="number"]{
     word-break: normal;
     font-size: 13px;
 }
+.modal-backdrop {
+  z-index: 0;
+}
